--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.1.0",
+    "date-and-time": "^0.12.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.1",
     "framer-motion": "^1.6.17",
@@ -87,6 +88,7 @@
     "react-intersection-observer": "^8.25.2",
     "storybook-addon-designs": "^5.1.1",
     "styled-components": "^4.4.1",
+    "swr": "^0.1.18",
     "webpack": "^4.41.2"
   }
 }
