--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "last 2 versions"
   ],
   "scripts": {
-    "build": "npm run build-storybook",
-    "build-storybook": "build-storybook",
+    "build": "npm run lint && npm run build-lib && build-storybook",
+    "build-lib": "tsc && npm run copy-css-to-lib && npm run copy-svg-to-lib && npm run copy-png-to-lib && npm run copy-woff2-to-lib",
+    "build-lib-watch": "tsc -w",
     "ci:manual": "start-server-and-test dev http://localhost:7774/?path=/story/ cypress:open",
     "ci:test": "start-server-and-test dev http://localhost:7774/?path=/story/ cypress:run",
+    "copy-css-to-lib": "cpx \"./src/**/*.css\" ./build/lib",
+    "copy-png-to-lib": "cpx \"./src/**/*.png\" ./build/lib",
+    "copy-svg-to-lib": "cpx \"./src/**/*.svg\" ./build/lib",
+    "copy-woff2-to-lib": "cpx \"./src/**/*.woff2\" ./build/lib",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
     "d": "npm run storybook",
     "dev": "npm run storybook",
     "develop": "npm run storybook",
     "format": "prettier --write \"**/*.{css,gql,js,json,jsx,md,scss}\"",
+    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
     "lint-fix": "npm run pretest -- --fix",
     "postinstall": "git submodule update --init --recursive || true",
     "pretest": "eslint --ignore-path .gitignore .",
@@ -39,6 +45,7 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "^1.10.4",
+    "@storybook/addon-info": "^5.3.14",
     "@testing-library/cypress": "^5.0.2",
     "cypress": "^3.8.0",
     "eslint": "^6.8.0",
@@ -47,18 +54,21 @@
     "npm-check": "^5.9.0",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
-    "start-server-and-test": "^1.10.7"
+    "react-docgen-typescript-loader": "^3.6.0",
+    "start-server-and-test": "^1.10.7",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@babel/core": "^7.8.0",
-    "@storybook/addon-actions": "^5.3.0",
-    "@storybook/addon-docs": "^5.3.3",
-    "@storybook/addon-knobs": "^5.3.0",
-    "@storybook/addon-links": "^5.3.0",
-    "@storybook/addon-options": "^5.3.0",
-    "@storybook/addon-viewport": "^5.3.0",
-    "@storybook/addons": "^5.3.0",
-    "@storybook/react": "^5.3.0",
+    "@babel/core": "^7.8.6",
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-docs": "^5.3.14",
+    "@storybook/addon-knobs": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/addon-options": "^5.3.14",
+    "@storybook/addon-viewport": "^5.3.14",
+    "@storybook/addons": "^5.3.14",
+    "@storybook/react": "^5.3.14",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-inline-react-svg": "^1.1.0",
@@ -69,8 +79,8 @@
     "dotenv": "^8.2.0",
     "formik": "^2.1.1",
     "framer-motion": "^1.6.17",
-    "gatsby": "^2.18.17",
-    "gatsby-cli": "^2.8.26",
+    "gatsby": "^2.19.23",
+    "gatsby-cli": "^2.9.0",
     "gatsby-image": "^2.2.37",
     "gatsby-link": "^2.2.27",
     "he": "^1.2.0",
@@ -80,14 +90,14 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-dropzone": "^10.2.1",
-    "react-grid-system": "^6.0.6",
+    "react-grid-system": "^6.2.4",
     "react-helmet": "^5.2.1",
-    "react-intersection-observer": "^8.25.2",
+    "react-intersection-observer": "^8.26.1",
     "storybook-addon-designs": "^5.1.1",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.0.1",
     "swr": "^0.1.18",
     "webpack": "^4.41.2"
   }
