--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "date-and-time": "^0.12.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.1",
-    "framer-motion": "^1.6.17",
+    "framer-motion": "^1.9.0",
     "gatsby": "^2.19.23",
     "gatsby-cli": "^2.9.0",
     "gatsby-image": "^2.2.37",
@@ -96,6 +96,8 @@
     "react-grid-system": "^6.2.4",
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.26.1",
+    "react-pose": "^4.0.10",
+    "react-pose-text": "^3.1.0",
     "storybook-addon-designs": "^5.1.1",
     "styled-components": "^5.0.1",
     "swr": "^0.1.18",
