LOTSA GOOD STUFF

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.6",
+    "@n8tb1t/use-scroll-position": "^1.0.43",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-docs": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
@@ -85,6 +86,7 @@
     "gatsby-link": "^2.2.27",
     "he": "^1.2.0",
     "html-react-parser": "^0.10.0",
+    "intersection-observer": "^0.7.0",
     "isomorphic-unfetch": "^3.0.0",
     "mailtoui": "^1.0.3",
     "normalize.css": "^8.0.1",
