Start local site generation

--- a/package.json
+++ b/package.json
@@ -44,29 +44,18 @@
     "upgrade-interactive": "npm-check --update"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^1.14.0",
-    "@storybook/addon-info": "^5.3.17",
-    "@testing-library/cypress": "^6.0.0",
-    "cypress": "^4.1.0",
     "eslint": "^6.8.0",
-    "faker": "^4.1.0",
-    "istanbul-lib-coverage": "^3.0.0",
     "npm-check": "^5.9.2",
-    "nyc": "^15.0.0",
-    "prettier": "^1.19.1",
-    "react-docgen-typescript-loader": "^3.7.1",
-    "start-server-and-test": "^1.10.10",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3"
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.40",
     "@babel/core": "^7.8.7",
     "@graphql-codegen/cli": "^1.13.0",
     "@graphql-codegen/fragment-matcher": "^1.13.0",
-    "@n8tb1t/use-scroll-position": "^1.0.43",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-docs": "^5.3.17",
+    "@storybook/addon-info": "^5.3.17",
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
     "@storybook/addon-options": "^5.3.17",
@@ -81,7 +70,6 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-preset-react-app": "^9.1.0",
-    "date-and-time": "^0.12.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.1",
     "framer-motion": "^1.9.1",
@@ -89,7 +77,9 @@
     "gatsby-cli": "^2.10.10",
     "gatsby-image": "^2.2.43",
     "gatsby-link": "^2.2.30",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "graphql-tools": "^4.0.7",
     "he": "^1.2.0",
     "html-react-parser": "^0.10.0",
     "intersection-observer": "^0.7.0",
@@ -97,6 +87,7 @@
     "mailtoui": "^1.0.3",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.11.1",
     "raw-loader": "^4.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
